objects/JBCXM__ScorecardFact__c.object
<CustomObject>
    <description>Scorecard fact table</description>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scorecard Fact</relationshipLabel>
        <relationshipName>Scorecard_Fact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__CurComment__c</fullName>
        <label>Current Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__CurScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Score Id</label>
        <referenceTo>JBCXM__ScoringSchemeDefinition__c</referenceTo>
        <relationshipLabel>Scorecard Fact</relationshipLabel>
        <relationshipName>CurrentScoreId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__CurSrcVal__c</fullName>
        <label>Current Source Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsOverridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOverridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__LastScoreModifiedDate__c</fullName>
        <label>Score Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__MetricId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Metric Id</label>
        <referenceTo>JBCXM__ScorecardMetric__c</referenceTo>
        <relationshipLabel>Scorecard Fact (Metric Id)</relationshipLabel>
        <relationshipName>ScorecardFactMetricId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__PrevScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Score Id</label>
        <referenceTo>JBCXM__ScoringSchemeDefinition__c</referenceTo>
        <relationshipLabel>Scorecard Fact (Previous Score Id)</relationshipLabel>
        <relationshipName>PreviousScoringId</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__PrevSrcVal__c</fullName>
        <label>Previous Source Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__ScoreLastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Score Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ScoreLastModifiedUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__TrendIndicator__c</fullName>
        <label>Trend Indicator</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Scorecard Fact</label>
    <nameField>
        <displayFormat>Fact-{0000}</displayFormat>
        <label>Scorecard Fact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Fact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>